Yaroslav (#12)
* SP1 - start

* SP1 - Booking and BookingController

* SP1 - Booking, BookingController, BookingDao, BookingService

* Main (#7)

* Artem10.02 (#3)

* start0

* st

* sttp19.02

---------

Co-authored-by: Sirius91191@gmail.com <as241288>
Co-authored-by: Yaroslav Havrylenko <116496404+YaroslavHavrylenko@users.noreply.github.com>

* consoles (#4)

* Yaroslav (#6)

* SP1 - start

* SP1 - Booking and BookingController

* SP1 - Booking, BookingController, BookingDao, BookingService

* Main for project (#8)

Co-authored-by: Sirius91191@gmail.com <as241288>

---------

Co-authored-by: sirius91191 <159278387+sirius91191@users.noreply.github.com>
Co-authored-by: AndrewOnyschenko <90859640+AndrewOnyschenko@users.noreply.github.com>

* SP1 - BookingControllerTest

* SP1 - BookingControllerTest

* SP1 - Fix bug

* SP1 - Fix bug with flight

---------

Co-authored-by: sirius91191 <159278387+sirius91191@users.noreply.github.com>
Co-authored-by: AndrewOnyschenko <90859640+AndrewOnyschenko@users.noreply.github.com>